# Lamp_smart_v2

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/Render_Engine/: Render_State.c  Render_State.h  Render_init.c  Render_init.h
main/Render_Engine/GFX_core/: GFX_Utils.c  GFX_Utils.h
main/Render_Engine/GFX_core/GFX_animation_core/: GFX_maneger_animation.c  GFX_maneger_animation.h
main/Render_Engine/GFX_core/GFX_animation_core/GFX_effects/: rainbow_fill.c  rainbow_fill.h
main/Render_Engine/RE_DEBUG/: RE_DEBUG.c  RE_DEBUG.h  RE_Time_Layer_proto.h
main/Render_Engine/lib/: Color_Spaces.c  Color_Spaces.h  HSL_color.c  HSL_color.h  RGB_prototype.h
main/Render_Engine/lib/STL_Lib/: List.c  List.h
main/main/: Devices_store.c  Devices_store.h  LED_RTM.c  LED_RTM.h
