idf_component_register(SRCS 
"main.c" 
"Render_Engine/lib/Color_Spaces.c" 
"main/LED_RTM.c" 
"main/Devices_store.c" 
"Render_Engine/Render_init.c" 
"Render_Engine/Render_State.c" 
"Render_Engine/GFX_core/GFX_Utils.c"
"Render_Engine/lib/STL_Lib/List.c"
"Render_Engine/GFX_core/GFX_animation_core/GFX_maneger_animation.c"
"Render_Engine/lib/HSL_color.c"
"Render_Engine/GFX_core/GFX_animation_core/GFX_effects/rainbow_fill.c"

"Render_Engine/RE_DEBUG/RE_DEBUG.c"
                    INCLUDE_DIRS ".")
